# SFML-dependencies

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MinGW-LIB2A.bat  VS2017.bat  build.bat  config-example.bat  iOS-dependencies.sh  macOS-dependencies.sh  readme.md
.github/workflows/: ci.yml
